--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
    <children>
       <HBox layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0">
@@ -18,11 +17,11 @@
                <children>
                   <HBox>
                      <children>
-                        <TextField prefHeight="25.0" prefWidth="341.0" />
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="54.0" text="Run" />
+                        <TextField fx:id="searchBar" prefHeight="25.0" prefWidth="341.0" />
+                        <Button fx:id="RunButton" mnemonicParsing="false" onAction="#RunButtonSelected" prefHeight="25.0" prefWidth="54.0" text="Run" />
                      </children>
                   </HBox>
-                  <ListView fx:id="listView" prefHeight="376.0" prefWidth="380.0" />
+                  <ListView fx:id="listView" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="376.0" prefWidth="380.0" />
                </children>
             </VBox>
             <VBox prefHeight="400.0" prefWidth="224.0">
