--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
    <children>
       <HBox layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -21,12 +15,12 @@
                         <Button fx:id="RunButton" mnemonicParsing="false" onAction="#RunButtonSelected" prefHeight="25.0" prefWidth="54.0" text="Run" />
                      </children>
                   </HBox>
-                  <ListView fx:id="listView" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="376.0" prefWidth="380.0" />
+                  <ListView fx:id="listView" onKeyPressed="#testselect" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="376.0" prefWidth="380.0" />
                </children>
             </VBox>
             <VBox prefHeight="400.0" prefWidth="224.0">
                <children>
-                  <TextArea prefHeight="368.0" prefWidth="222.0" />
+                  <TextArea fx:id="runningTests" prefHeight="368.0" prefWidth="222.0" />
                   <HBox prefHeight="45.0" prefWidth="222.0">
                      <children>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
