--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -20,12 +20,12 @@
             </VBox>
             <VBox prefHeight="400.0" prefWidth="224.0">
                <children>
-                  <TextArea fx:id="runningTests" prefHeight="383.0" prefWidth="222.0" />
+                  <TextArea fx:id="runningTests" prefHeight="402.0" prefWidth="309.0" />
                   <HBox prefHeight="45.0" prefWidth="222.0">
                      <children>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Rerun" />
+                              <Button fx:id="RerunButton" mnemonicParsing="false" text="Rerun" />
                            </children>
                         </StackPane>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
