--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -1,47 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
    <children>
-      <HBox layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0">
+      <HBox layoutX="10.0" layoutY="10.0" prefHeight="480.0" prefWidth="780.0">
          <children>
-            <VBox prefHeight="400.0" prefWidth="380.0">
+            <VBox layoutX="10.0" prefHeight="400.0" prefWidth="200.0">
                <children>
-                  <HBox>
-                     <children>
-                        <TextField fx:id="searchBar" prefHeight="25.0" prefWidth="341.0" />
-                        <Button fx:id="RunButton" mnemonicParsing="false" onAction="#RunButtonSelected" prefHeight="25.0" prefWidth="54.0" text="Run" />
-                     </children>
-                  </HBox>
-                  <ListView fx:id="listView" onKeyPressed="#testselect" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="376.0" prefWidth="380.0" />
+                  <ListView fx:id="listView" onKeyPressed="#testselect" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="445.0" prefWidth="200.0" />
                </children>
             </VBox>
-            <VBox prefHeight="400.0" prefWidth="224.0">
+            <VBox prefHeight="400.0" prefWidth="580.0">
                <children>
-                  <TextArea fx:id="runningTests" prefHeight="402.0" prefWidth="309.0" />
                   <HBox prefHeight="45.0" prefWidth="222.0">
                      <children>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <Button fx:id="RerunButton" mnemonicParsing="false" text="Rerun" />
+                              <Button fx:id="RerunButton" mnemonicParsing="false" onAction="#ReRunButtonSelected" prefHeight="150.0" prefWidth="200.0" text="Rerun" />
                            </children>
                         </StackPane>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Reset" />
+                              <Button mnemonicParsing="false" onAction="#ResetButtonSelected" prefHeight="150.0" prefWidth="200.0" text="Reset" />
                            </children>
                         </StackPane>
                         <StackPane prefHeight="150.0" prefWidth="200.0">
                            <children>
-                              <Button mnemonicParsing="false" text="Stop" />
+                              <Button fx:id="StopButton" mnemonicParsing="false" onAction="#StopButtonSelected" prefHeight="150.0" prefWidth="200.0" text="Stop" />
                            </children>
                         </StackPane>
                      </children>
                   </HBox>
+                  <TextArea fx:id="runningTests" prefHeight="400.0" prefWidth="144.0" />
                </children>
             </VBox>
+         </children>
+      </HBox>
+      <HBox layoutX="10.0" layoutY="463.0">
+         <children>
+            <TextField fx:id="searchBar" prefHeight="30.0" prefWidth="710.0" />
+            <Button fx:id="RunButton" mnemonicParsing="false" onAction="#RunButtonSelected" prefHeight="30.0" prefWidth="70.0" text="Run" />
          </children>
       </HBox>
    </children>
