--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
    <children>
       <HBox layoutX="10.0" layoutY="10.0" prefHeight="480.0" prefWidth="780.0">
          <children>
-            <VBox layoutX="10.0" prefHeight="400.0" prefWidth="200.0">
+            <VBox layoutX="10.0" prefHeight="445.0" prefWidth="400.0">
                <children>
-                  <ListView fx:id="listView" onKeyPressed="#testselect" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="445.0" prefWidth="200.0" />
+                  <HBox prefHeight="445.0" prefWidth="200.0">
+                     <children>
+                        <ListView fx:id="listView" onKeyPressed="#testselect" onMouseClicked="#testselect" onMouseDragged="#testselect" prefHeight="445.0" prefWidth="200.0" />
+                        <ListView fx:id="testmethods" onKeyPressed="#selectmethod" onMouseClicked="#selectmethod" onMouseDragged="#selectmethod" prefHeight="445.0" prefWidth="200.0" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="400.0" prefWidth="580.0">
+            <VBox prefHeight="400.0" prefWidth="480.0">
                <children>
                   <HBox prefHeight="45.0" prefWidth="222.0">
                      <children>
@@ -33,15 +44,15 @@
                         </StackPane>
                      </children>
                   </HBox>
-                  <TextArea fx:id="runningTests" prefHeight="400.0" prefWidth="144.0" style="-fx-font-size: 13.5; -fx-font-weight: Bold; -fx-font-family: monospace; -fx-font-style: italic"/>
+                  <TextArea fx:id="runningTests" prefHeight="400.0" prefWidth="144.0" style="-fx-font-size: 13.5; -fx-font-weight: Bold; -fx-font-family: monospace; -fx-font-style: italic" />
                </children>
             </VBox>
          </children>
       </HBox>
       <HBox layoutX="10.0" layoutY="463.0">
          <children>
-            <TextField fx:id="searchBar" prefHeight="30.0" prefWidth="710.0" />
             <Button fx:id="RunButton" mnemonicParsing="false" onAction="#RunButtonSelected" prefHeight="30.0" prefWidth="70.0" text="Run" />
+            <TextField fx:id="searchBar" prefHeight="30.0" prefWidth="710.0" />
          </children>
       </HBox>
    </children>
