--- a/src/assignment4/gui/TestGUI.fxml
+++ b/src/assignment4/gui/TestGUI.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assignment4.gui.TestGUIController">
    <children>
@@ -44,7 +45,11 @@
                         </StackPane>
                      </children>
                   </HBox>
-                  <TextArea fx:id="runningTests" prefHeight="400.0" prefWidth="144.0" style="-fx-font-size: 11.75; -fx-font-weight: Bold; -fx-font-family: monospace; -fx-font-style: italic;" text="Instructions:&#10;&#10;Specify the class path by clicking through the directories&#10;&#10;The tests can be found in test directory&#10;&#10;To delete a test, just remove the test from the search bar&#10;below using your keyboard&#10;&#10;Run: Runs the selected tests&#10;&#10;Rerun: Reruns the selected tests&#10;&#10;Reset: Clears the previous test summary&#10;&#10;Stop: Closes the gui" />
+                  <ScrollPane fx:id="scrollpane" prefHeight="400.0" prefWidth="200.0">
+                     <content>
+                        <TextFlow fx:id="runningTests" prefHeight="400.0" prefWidth="420.0" />
+                     </content>
+                  </ScrollPane>
                </children>
             </VBox>
          </children>
